Check if any input tokens given to Arithmetic
Until now, unlike the other programs, the Arithmetic program wouldn't
complain if no tokens was given. Therefore, the first time that it was
necessary to read the tokens, there was nothing to read and Arithmetic
would abort with a segmentation fault. With this commit, a check has been
added to let the user know in this case.

This bug was reported by Lee Spitler.

This fixes bug #52422.

--- a/NEWS
+++ b/NEWS
@@ -152,6 +152,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   NoiseChisel leaving unlabeled regions after clump growth (bug #52327).
 
+  Arithmetic crash with no input tokens (bug #52422).
+
 
 
 
