--- a/THANKS
+++ b/THANKS
@@ -37,6 +37,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     William Pence                        William.Pence@nasa.gov
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Alejandro Serrano Borlaff            asborlaff@ucm.es
+    Lee Spitler                          lee.spitler@mq.edu.au
     Richard Stallman                     rms@gnu.org
     Ole Streicher                        olebole@debian.org
     Ignacio Trujillo                     trujillo@iac.es
