Check for libtool rejects Gnuastro's own libtool implementation
On some systems, `AC_CHECK_PROG' will also look into the current directory
for an executable. Therefore, it will find Gnuastro's own `libtool'
implementation even if the system doesn't have Libtool. So at configure
time, Gnuastro will think there is a libtool, but at check time
BuildProgram's check is going to crash.

This bug was reported by Lee Spitler.

This fixes bug #52427.

--- a/NEWS
+++ b/NEWS
@@ -154,6 +154,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Arithmetic crash with no input tokens (bug #52422).
 
+  Libtool checks only in non-current directory (bug #52427).
+
+
 
 
 
